pages for KR 24 paper

--- a/krr.bib
+++ b/krr.bib
@@ -24147,6 +24147,7 @@ Benchmarks},
   title = {Large Neighborhood Prioritized Search for Combinatorial Optimization with Answer Set Programming},
   author = {I. Sugimori and K. Inoue and H. Nabeshima and T. Schaub and T. Soh and N. Tamura and M. Banbara},
   crossref = {kr24},
+  pages = {765-776},
   doi = {10.24963/KR.2024/72},
   note = {Available as \cite{suinnascsotaba24a}},
   url = {https://doi.org/10.24963/kr.2024/72}
